Added constants and User saving method